--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -36,7 +36,7 @@ gelato-page > .container > .content-block {
 
  #vocablist-nav-links {
   background: $wood7;
-  margin-top: -58px;
+  margin-top: -60px;
   overflow-x: scroll;
   padding-bottom: 10px;
   padding-top: 10px;
